Fix options wrap

--- a/src/workout/Option.css
+++ b/src/workout/Option.css
@@ -1,3 +1,7 @@
+.Option {
+  margin: 5px;
+}
+
 .Option.correct button {
   background-color: #b1dab1 !important;
 }
